[package]
name = "bs58"
version = "0.4.0"
description = "Another Base58 codec implementation."
repository = "https://github.com/Nullus157/bs58-rs"
readme = "README.md"
keywords = ["base58"]
license = "MIT/Apache-2.0"
edition = "2018"

[workspace]
members = ["cli"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []
check = ["sha2"]
cb58 = ["sha2"]
bigint = ["num-bigint", "num-traits"]

[dependencies]
sha2 = { version = "0.10", optional = true, default-features = false }
num-bigint = { version = "0.4.3", optional = true, default-features = false }
num-traits = { version = "0.2.15", optional = true, default-features = false }

[dev_dependencies]
criterion = "0.3"
base58 = "0.1.0"
rust-base58 = "0.0.4"
assert_matches = "1.3.0"

[[bench]]
name = "encode"
path = "benches/encode.rs"
harness = false

[[bench]]
name = "decode"
path = "benches/decode.rs"
harness = false
