[package]
name = "bs58-cli"
version = "0.1.1"
edition = "2021"
description = """
A cli utility for encoding/decoding base58 encoded data
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nullus157/bs58-rs"
readme = "README.md"

[[bin]]
name = "bs58"
path = "src/main.rs"

[dependencies]
bs58 = { version = "0.4.0", path = ".." }
structopt = { version = "0.3.21", default-features = false, features = ["color"] }
anyhow = { version = "1.0.35", default-features = false, features = ["std"] }
