[package]
name = "bs58-cli"
version = "0.1.1"
edition = "2018"
description = """
A cli utility for encoding/decoding base58 encoded data
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nullus157/bs58-rs"
readme = "README.md"

[[bin]]
name = "bs58"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.71", default-features = false, features = ["std"] }
bs58 = { version = "0.5.0", path = ".." }
clap = { version = "4.3.0", default-features = false, features = ["std", "derive", "color", "wrap_help", "error-context", "cargo", "suggestions", "usage"] }
